# moral_outrage_classifier

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/runbooks/: HOW_TO_RUN_EVALS.md  SETUP.md
evaluation/: dataloader.py  examples_test.py  run_evaluation_harness.py
evaluation/sample_data/2026_04_03-04:52:46/: metadata.json
evaluation/sample_data/2026_04_07-08:21:33/: test_data.csv  train_data.csv
lib/: constants.py  decorators.py  evaluation_helpers.py  load_env_vars.py  testing_utils.py  timestamp_utils.py
models/: base.py
models/llm/: base.py  examples_test.py  llm_service.py  retry.py
models/llm/config/: model_registry.py  models.yaml
models/llm/providers/: openai_provider.py  openrouter_provider.py  registry.py
models/llm/smoke_tests/: anthropic_examples.py  base_examples.py  minimax_examples.py  openai_examples.py  qwen_examples.py
models/llm_openai/: examples_test.py  model.py
models/perspective_api/: examples_test.py  model.py
schemas/: responses.py
scripts/: sample_train_test_data.py
strategy_planning/: README.md
strategy_planning/2026-03-27_initial_problem_specs/: eval_harness_spec.md  rest_api_spec.md  spec.md
tests/evaluation/: test_dataloader.py  test_run_evaluation_harness.py
